recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:2: error: Missing closing brace `}' assumed here
override def run() {
^FourSquare:2: error: expected start of definition
override def run() {
         ^