recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {

def carre :Int={	
   for(k<-1 to 3){
     avance(100);
     droite(90);
   
     

}

}
